# IndirectCallAnalyzer

./: CMakeLists.txt  ReadMe.md  main.cpp
docs/: c++.md  inter-variables.md  mlta_case_analysis.md  step.md
include/: Analyzer.h  CallGraph.h  Common.h  Config.h  MLTA.h
include/Passes/: CallGraphPass.h  FLTAPass.h  KELPPass.h  KelpPass.h  MLTADFPass.h  MLTAPass.h
include/Utils/: Common.h  Config.h
lib/: CMakeLists.txt  CallGraph.cpp  Common.cpp  Config.cpp  MLTA.cpp
lib/Passes/: CallGraphPass.cpp  FLTAPass.cpp  KELPPass.cpp  KelpPass.cpp  MLTADFPass.cpp  MLTAPass.cpp  MLTAPassUtil.cpp
lib/Utils/: Common.cpp  Config.cpp
testcases/flta/test1/: test.c
testcases/flta/test2/: test.c
testcases/kelp/test1-branch/: test.c
testcases/kelp/test2-branch-cast/: test.c
testcases/kelp/test3-branch-ptrtoint/: test.c
testcases/mlta/test1/: test.c
testcases/mlta/test10/: test.c
testcases/mlta/test11/: test.c
testcases/mlta/test12/: test.c
testcases/mlta/test13/: test.c
testcases/mlta/test14/: test.c
testcases/mlta/test2/: test.c
testcases/mlta/test3/: test.c
testcases/mlta/test4/: test.c
testcases/mlta/test5/: test.c
testcases/mlta/test6/: test.c
testcases/mlta/test7/: test.c
testcases/mlta/test8/: test.c
testcases/mlta/test9/: test.c
testcases/test1/: test.c
testcases/test4/: test.c
tools/: CMakeLists.txt  ICA.cpp
